# palantir-agent

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml  lets.yaml
benches/: checksum.rs  histogram.rs
dashboards/: palantir-minimal.json
examples/: client.rs
src/: main.rs
src/lib/: constants.rs  mod.rs
src/lib/config/: defs.rs  mod.rs  parser.rs  validator.rs
src/lib/metrics/: mod.rs  tag.rs  traits.rs
src/lib/metrics/histogram/: builder.rs  metric.rs
src/lib/util/: checksum.rs
src/lib/workers/registry/: apm.rs  error.rs  hc.rs  mod.rs  processor.rs  reporter.rs
src/lib/workers/server/: mod.rs  router.rs
src/lib/workers/server/listeners/: udp.rs
