[package]
name    = "palantir-agent"
version = "0.1.0"
authors = ["Oleksandr Korienev <alexkorienev@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
palantir-proto = { git = "ssh://git@github.com/AlexPraefectus/palantir-proto.git", branch = "master"}
serde_yaml="0.8.17"
serde = { version = "1.0.124", features = ["derive"] }
log="0.4.14"
simple_logger="1.11.0"
itertools="0.10.0"

[dev-dependencies]
criterion = "0.3"
rand = "0.8.3"

[lib]
name="palantir_agent_lib"
path="src/lib/mod.rs"

[[bin]]
name="palantir_agent_bin"
path= "src/bin/agent.rs"

[[bench]]
name = "histogram"
harness = false

[[bench]]
name = "checksum"
harness = false

[[example]]
name = "client"
path = "examples/client.rs"
